# karp-republic-explorer

./: .gitignore  .npmrc  LICENSE  README.md  SETUP.md  env.example  index.html  package-lock.json  package.json  tailwind.config.ts
.cursor/rules/: structure.md
context/: README.md  hard-power_soft-power.md  key-themes.md  rough_chapter_summaries.md  rough_notes.md  wall_st_journal_article.md
netlify/functions/: search-context.js
public/: source.txt
public/audio/: README.md
scripts/: README.md  chunk_and_upload.py  pyproject.toml  requirements.txt  test_neon_connection.py
src/components/: AudioSummary.tsx  BookSummary.tsx  ChapterBreakdown.tsx  ChatInterface.tsx  FeedbackForm.tsx  FloatingParticles.tsx  ModernNavigation.tsx  NetworkVisualization.tsx  NetworkVisualization2D.tsx  References.tsx  SimpleNavigation.tsx
src/lib/: contextLoader.ts  geminiApi.ts  neo4jClient.ts  networkDiagramData.ts
src/pages/: Index.tsx
